Add support ticket functionality: create support page, implement ticket submission and retrieval, and enhance database schema for support tickets

--- a/employee-dashboard.html
+++ b/employee-dashboard.html
@@ -44,6 +44,8 @@
       <a href="settings.html" data-role="admin">Settings</a>
       <a href="settings-employee.html" data-role="employee">Settings</a>
       <a href="item-history.html" data-role="admin">Audit</a>
+        <a href="support.html">Support</a>
+
     </nav>
     </aside>
     <main class="main">
@@ -197,6 +199,8 @@
   </script>
 </body>
 </html>
+
+
 
 
 
