--- a/field-purchase.html
+++ b/field-purchase.html
@@ -35,6 +35,8 @@
         <a href="settings.html" data-role="admin">Settings</a>
         <a href="settings-employee.html" data-role="employee">Settings</a>
         <a href="item-history.html" data-role="admin">Audit</a>
+        <a href="support.html">Support</a>
+
       </nav>
     </aside>
 
@@ -103,5 +105,7 @@
   <script src="js/field-purchase.js"></script>
 </body>
 </html>
+
+
 
 
