--- a/inventory-operations.html
+++ b/inventory-operations.html
@@ -53,6 +53,8 @@
       <a href="settings.html" data-role="admin">Settings</a>
       <a href="settings-employee.html" data-role="employee">Settings</a>
       <a href="item-history.html" data-role="admin">Audit</a>
+        <a href="support.html">Support</a>
+
     </nav>
   </aside>
     <main class="main">
@@ -293,6 +295,8 @@
   <script src="js/operations.js"></script>
 </body>
 </html>
+
+
 
 
 
