--- a/order-register.html
+++ b/order-register.html
@@ -33,6 +33,8 @@
       <a href="settings.html" data-role="admin">Settings</a>
       <a href="settings-employee.html" data-role="employee">Settings</a>
       <a href="item-history.html" data-role="admin">Audit</a>
+        <a href="support.html">Support</a>
+
     </nav>
   </aside>
 
@@ -272,5 +274,7 @@
   <script>document.addEventListener('DOMContentLoaded',()=>{if(window.utils){utils.wrapFetchWithRole?.();utils.applyStoredTheme?.();utils.applyNavVisibility?.();utils.setupLogout?.();}});</script>
 </body>
 </html>
+
+
 
 
