--- a/seller-admin.html
+++ b/seller-admin.html
@@ -34,6 +34,8 @@
         <a href="settings-employee.html" data-role="employee">Settings</a>
         <a href="item-history.html" data-role="admin">Audit</a>
         <a class="active" href="seller-admin.html" data-dev-only>Seller Admin</a>
+        <a href="support.html">Support</a>
+
       </nav>
     </aside>
 
@@ -291,3 +293,5 @@
   </script>
 </body>
 </html>
+
+
