--- a/settings-employee.html
+++ b/settings-employee.html
@@ -33,6 +33,8 @@
         <a href="settings.html" data-role="admin">Settings</a>
         <a class="active" href="settings-employee.html" data-role="employee">Settings</a>
         <a href="item-history.html" data-role="admin">Audit</a>
+        <a href="support.html">Support</a>
+
       </nav>
     </aside>
 
@@ -151,6 +153,8 @@
   <script src="js/settings-employee.js"></script>
 </body>
 </html>
+
+
 
 
 
