--- a/dashboard.html
+++ b/dashboard.html
@@ -36,6 +36,8 @@
         <a href="settings.html" data-role="admin">Settings</a>
         <a href="settings-employee.html" data-role="employee">Settings</a>
         <a href="item-history.html" data-role="admin">Audit</a>
+        <a href="support.html">Support</a>
+
       </nav>
     </aside>
     <main class="main">
@@ -130,6 +132,8 @@
   <script src="js/dashboard.js"></script>
 </body>
 </html>
+
+
 
 
 
