--- a/item-history.html
+++ b/item-history.html
@@ -33,6 +33,8 @@
         <a href="settings.html" data-role="admin">Settings</a>
         <a href="settings-employee.html" data-role="employee">Settings</a>
         <a class="active" href="item-history.html" data-role="admin">Audit</a>
+        <a href="support.html">Support</a>
+
       </nav>
     </aside>
 
@@ -68,5 +70,7 @@
   <script>document.addEventListener('DOMContentLoaded',()=>{if(window.utils){utils.wrapFetchWithRole?.();utils.applyStoredTheme?.();utils.applyNavVisibility?.();utils.setupLogout?.();}});</script>
 </body>
 </html>
+
+
 
 
