--- a/settings.html
+++ b/settings.html
@@ -33,6 +33,8 @@
       <a class="active" href="settings.html" data-role="admin">Settings</a>
       <a href="settings-employee.html" data-role="employee">Settings</a>
       <a href="item-history.html" data-role="admin">Audit</a>
+        <a href="support.html">Support</a>
+
     </nav>
   </aside>
 
@@ -261,6 +263,8 @@
     <script>document.addEventListener('DOMContentLoaded',()=>{if(window.utils){utils.wrapFetchWithRole?.();utils.applyStoredTheme?.();utils.applyNavVisibility?.();utils.setupLogout?.();}});</script>
   </body>
   </html>
+
+
 
 
 
