--- a/inventory-operations.html
+++ b/inventory-operations.html
@@ -25,7 +25,7 @@
     @media(max-width:900px){.ops-hero{grid-template-columns:1fr}}
   </style>
 </head>
-<body>
+<body data-ds="pro">
   <div class="app">
     <aside class="sidebar">
       <div>
