Update app links to include .html extension for consistency

--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
         <a class="active" href="contact.html">Contact</a>
       </nav>
       <div class="header-actions">
-        <a class="btn btn-primary app-cta" data-app-link href="https://app.example.com/login">Go to App</a>
+        <a class="btn btn-primary app-cta" data-app-link href="https://app.example.com/login.html">Go to App</a>
         <button class="nav-toggle" type="button" aria-expanded="false" aria-controls="site-nav">Menu</button>
       </div>
     </div>
@@ -40,7 +40,7 @@
           <p>Tell us about your inventory setup and we will recommend the best plan, rollout, and integration path.</p>
           <div class="hero-actions">
             <a class="btn btn-primary" href="#contact-form">Request a demo</a>
-            <a class="btn btn-secondary" data-app-link href="https://app.example.com/login">Go to App</a>
+            <a class="btn btn-secondary" data-app-link href="https://app.example.com/login.html">Go to App</a>
           </div>
         </div>
         <div class="hero-card fade-up delay-2">
@@ -104,7 +104,7 @@
           </div>
           <div style="display:flex;gap:12px;flex-wrap:wrap;justify-content:flex-end;">
             <a class="btn btn-secondary" href="features.html">View features</a>
-            <a class="btn btn-primary" data-app-link href="https://app.example.com/login">Go to App</a>
+            <a class="btn btn-primary" data-app-link href="https://app.example.com/login.html">Go to App</a>
           </div>
         </div>
       </div>
@@ -130,7 +130,7 @@
         <strong>Company</strong>
         <a href="contact.html">Contact</a>
         <a href="contact.html">Request a demo</a>
-        <a data-app-link href="https://app.example.com/login">Go to App</a>
+        <a data-app-link href="https://app.example.com/login.html">Go to App</a>
       </div>
       <div class="footer-links">
         <strong>Contact</strong>
