--- a/features.html
+++ b/features.html
@@ -25,7 +25,7 @@
         <a href="contact.html">Contact</a>
       </nav>
       <div class="header-actions">
-        <a class="btn btn-primary app-cta" data-app-link href="https://app.example.com/login">Go to App</a>
+        <a class="btn btn-primary app-cta" data-app-link href="https://app.example.com/login.html">Go to App</a>
         <button class="nav-toggle" type="button" aria-expanded="false" aria-controls="site-nav">Menu</button>
       </div>
     </div>
@@ -137,7 +137,7 @@
           </div>
           <div style="display:flex;gap:12px;flex-wrap:wrap;justify-content:flex-end;">
             <a class="btn btn-secondary" href="contact.html">Contact sales</a>
-            <a class="btn btn-primary" data-app-link href="https://app.example.com/login">Go to App</a>
+            <a class="btn btn-primary" data-app-link href="https://app.example.com/login.html">Go to App</a>
           </div>
         </div>
       </div>
@@ -163,7 +163,7 @@
         <strong>Company</strong>
         <a href="contact.html">Contact</a>
         <a href="contact.html">Request a demo</a>
-        <a data-app-link href="https://app.example.com/login">Go to App</a>
+        <a data-app-link href="https://app.example.com/login.html">Go to App</a>
       </div>
       <div class="footer-links">
         <strong>Contact</strong>
