Refactor marketing styles and update HTML for Mercato Tech branding

--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-app-host="app.mercato.tech">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>IMS Cloud | Inventory clarity for modern operations</title>
-  <meta name="description" content="IMS Cloud is a modern inventory management platform for procurement, allocation, and field teams. Real-time stock, audit-ready trails, and fast onboarding." />
+  <title>Mercato Tech | Industrial inventory command for modern ops</title>
+  <meta name="description" content="Mercato Tech is an industrial inventory command center for procurement, allocation, and field teams. Real-time stock, audit-ready trails, and rapid deployment." />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&family=Space+Grotesk:wght@500;600;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@500;600;700&family=Sora:wght@400;500;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="css/marketing.css" />
 </head>
 <body>
   <header class="site-header">
     <div class="container header-inner">
       <a class="logo" href="index.html">
-        <span class="logo-mark">IMS</span>
-        <div class="logo-text">IMS Cloud<span>Inventory platform</span></div>
+        <span class="logo-mark">MT</span>
+        <div class="logo-text">Mercato Tech<span>Industrial inventory</span></div>
       </a>
       <nav class="site-nav" id="site-nav">
         <a class="active" href="index.html">Home</a>
@@ -25,7 +25,7 @@
         <a href="contact.html">Contact</a>
       </nav>
       <div class="header-actions">
-        <a class="btn btn-primary app-cta" data-app-link href="https://app.example.com/login.html">Go to App</a>
+        <a class="btn btn-primary app-cta" data-app-link href="https://app.mercato.tech/login.html">Go to App</a>
         <button class="nav-toggle" type="button" aria-expanded="false" aria-controls="site-nav">Menu</button>
       </div>
     </div>
@@ -35,9 +35,9 @@
     <section class="hero">
       <div class="container hero-grid">
         <div class="fade-up">
-          <p class="pill">Built for operations and field teams</p>
-          <h1>Inventory clarity for fast-moving teams.</h1>
-          <p>IMS Cloud brings procurement, allocation, and field checkouts into one real-time workspace. Reduce stockouts, track every move, and stay audit ready.</p>
+          <p class="pill">Industrial ops OS</p>
+          <h1>Command-grade inventory for industrial crews.</h1>
+          <p>Mercato Tech syncs procurement, allocation, and field checkouts into one real-time ops console. Cut downtime, track every move, and stay audit ready.</p>
           <div class="hero-actions">
             <a class="btn btn-primary" href="contact.html">Request a demo</a>
             <a class="btn btn-secondary" href="pricing.html">See pricing</a>
@@ -45,21 +45,21 @@
           <div class="hero-stats">
             <div class="stat">
               <strong>32%</strong>
-              <span class="muted">fewer stockouts</span>
+              <span class="muted">less downtime</span>
             </div>
             <div class="stat">
-              <strong>1 day</strong>
-              <span class="muted">average onboarding</span>
+              <strong>7 days</strong>
+              <span class="muted">deployment window</span>
             </div>
             <div class="stat">
               <strong>99.95%</strong>
-              <span class="muted">uptime in last 12 months</span>
+              <span class="muted">platform uptime</span>
             </div>
           </div>
         </div>
         <div class="hero-card fade-up delay-2">
-          <h3>Live Ops Snapshot</h3>
-          <p class="muted">See open orders, available units, and reservations across every project.</p>
+          <h3>Ops Console Snapshot</h3>
+          <p class="muted">Monitor open orders, live stock, and allocations across every site.</p>
           <div class="grid">
             <div class="card">
               <strong>Open Orders</strong>
@@ -86,8 +86,8 @@
     <section class="section">
       <div class="container">
         <div class="section-heading fade-up">
-          <h2>Everything operations needs, in one view</h2>
-          <p>From requisition to check-in, every move is captured with real-time availability.</p>
+          <h2>Industrial control, in one view</h2>
+          <p>From requisition to check-in, every move is captured with real-time visibility.</p>
         </div>
         <div class="grid">
           <div class="card fade-up delay-1">
@@ -99,8 +99,8 @@
             <p class="muted">Reserve stock to projects and enforce business rules before check-out.</p>
           </div>
           <div class="card fade-up delay-3">
-            <h3>Field-ready checkouts</h3>
-            <p class="muted">Mobile friendly workflows keep your crews focused and accountable.</p>
+            <h3>Field-hardened checkouts</h3>
+            <p class="muted">Mobile workflows keep crews focused, fast, and accountable.</p>
           </div>
           <div class="card fade-up delay-4">
             <h3>Audit-ready history</h3>
@@ -113,7 +113,7 @@
     <section class="section">
       <div class="container split">
         <div class="fade-up">
-          <h2>Built for the way you actually work</h2>
+          <h2>Built for the way crews actually work</h2>
           <p class="muted">Manage inventory across warehouses, jobsites, and field trucks without spreadsheets.</p>
           <ul class="list">
             <li><span>1</span>Single source of truth for inventory and job allocation.</li>
@@ -122,7 +122,7 @@
           </ul>
         </div>
         <div class="card fade-up delay-2">
-          <h3>Operations signals at a glance</h3>
+          <h3>Operational signals at a glance</h3>
           <p class="muted">Dashboards tuned for managers, buyers, and field leads.</p>
           <div class="grid">
             <div class="card">
@@ -209,12 +209,12 @@
       <div class="container">
         <div class="cta-strip fade-up">
           <div>
-            <h2>Ready to see IMS Cloud in action?</h2>
+            <h2>Ready to run Mercato Tech?</h2>
             <p>Book a walkthrough and get a tailored rollout plan.</p>
           </div>
           <div style="display:flex;gap:12px;flex-wrap:wrap;justify-content:flex-end;">
             <a class="btn btn-secondary" href="contact.html">Talk to sales</a>
-            <a class="btn btn-primary" data-app-link href="https://app.example.com/login.html">Go to App</a>
+            <a class="btn btn-primary" data-app-link href="https://app.mercato.tech/login.html">Go to App</a>
           </div>
         </div>
       </div>
@@ -225,10 +225,10 @@
     <div class="container footer-grid">
       <div>
         <div class="logo" style="margin-bottom:10px;">
-          <span class="logo-mark">IMS</span>
-          <div class="logo-text">IMS Cloud<span>Inventory platform</span></div>
+          <span class="logo-mark">MT</span>
+          <div class="logo-text">Mercato Tech<span>Industrial inventory</span></div>
         </div>
-        <p class="muted">Modern inventory management for operations leaders and field teams.</p>
+        <p class="muted">Industrial inventory command for operations leaders and field teams.</p>
       </div>
       <div class="footer-links">
         <strong>Product</strong>
@@ -240,11 +240,11 @@
         <strong>Company</strong>
         <a href="contact.html">Contact</a>
         <a href="contact.html">Request a demo</a>
-        <a data-app-link href="https://app.example.com/login.html">Go to App</a>
+        <a data-app-link href="https://app.mercato.tech/login.html">Go to App</a>
       </div>
       <div class="footer-links">
         <strong>Contact</strong>
-        <span class="muted">hello@imscloud.example</span>
+        <span class="muted">hello@mercato.tech</span>
         <span class="muted">+1 (555) 014-2211</span>
         <span class="muted">Austin, TX</span>
       </div>
