--- a/security.html
+++ b/security.html
@@ -1,21 +1,21 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-app-host="app.mercato.tech">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>IMS Cloud Security | Built for trust and compliance</title>
-  <meta name="description" content="Security and compliance details for IMS Cloud. Role-based access, audit logs, encryption, and tenant isolation by default." />
+  <title>Mercato Tech Security | Industrial-grade protection</title>
+  <meta name="description" content="Security and compliance details for Mercato Tech. Role-based access, audit logs, encryption, and tenant isolation by default." />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&family=Space+Grotesk:wght@500;600;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@500;600;700&family=Sora:wght@400;500;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="css/marketing.css" />
 </head>
 <body>
   <header class="site-header">
     <div class="container header-inner">
       <a class="logo" href="index.html">
-        <span class="logo-mark">IMS</span>
-        <div class="logo-text">IMS Cloud<span>Inventory platform</span></div>
+        <span class="logo-mark">MT</span>
+        <div class="logo-text">Mercato Tech<span>Industrial inventory</span></div>
       </a>
       <nav class="site-nav" id="site-nav">
         <a href="index.html">Home</a>
@@ -25,7 +25,7 @@
         <a href="contact.html">Contact</a>
       </nav>
       <div class="header-actions">
-        <a class="btn btn-primary app-cta" data-app-link href="https://app.example.com/login.html">Go to App</a>
+        <a class="btn btn-primary app-cta" data-app-link href="https://app.mercato.tech/login.html">Go to App</a>
         <button class="nav-toggle" type="button" aria-expanded="false" aria-controls="site-nav">Menu</button>
       </div>
     </div>
@@ -35,9 +35,9 @@
     <section class="hero">
       <div class="container hero-grid">
         <div class="fade-up">
-          <p class="pill">Security and compliance</p>
-          <h1>Built for trust, from day one.</h1>
-          <p>IMS Cloud protects your data with strong access controls, encryption, and audit trails designed for operational teams.</p>
+          <p class="pill">Security core</p>
+          <h1>Industrial-grade protection, from day one.</h1>
+          <p>Mercato Tech protects your data with strong access controls, encryption, and audit trails designed for industrial teams.</p>
           <div class="hero-actions">
             <a class="btn btn-primary" href="contact.html">Request security brief</a>
             <a class="btn btn-secondary" href="features.html">View features</a>
@@ -110,7 +110,7 @@
           </div>
           <div style="display:flex;gap:12px;flex-wrap:wrap;justify-content:flex-end;">
             <a class="btn btn-secondary" href="contact.html">Talk to security</a>
-            <a class="btn btn-primary" data-app-link href="https://app.example.com/login.html">Go to App</a>
+            <a class="btn btn-primary" data-app-link href="https://app.mercato.tech/login.html">Go to App</a>
           </div>
         </div>
       </div>
@@ -121,10 +121,10 @@
     <div class="container footer-grid">
       <div>
         <div class="logo" style="margin-bottom:10px;">
-          <span class="logo-mark">IMS</span>
-          <div class="logo-text">IMS Cloud<span>Inventory platform</span></div>
+          <span class="logo-mark">MT</span>
+          <div class="logo-text">Mercato Tech<span>Industrial inventory</span></div>
         </div>
-        <p class="muted">Modern inventory management for operations leaders and field teams.</p>
+        <p class="muted">Industrial inventory command for operations leaders and field teams.</p>
       </div>
       <div class="footer-links">
         <strong>Product</strong>
@@ -136,11 +136,11 @@
         <strong>Company</strong>
         <a href="contact.html">Contact</a>
         <a href="contact.html">Request a demo</a>
-        <a data-app-link href="https://app.example.com/login.html">Go to App</a>
+        <a data-app-link href="https://app.mercato.tech/login.html">Go to App</a>
       </div>
       <div class="footer-links">
         <strong>Contact</strong>
-        <span class="muted">hello@imscloud.example</span>
+        <span class="muted">hello@mercato.tech</span>
         <span class="muted">+1 (555) 014-2211</span>
         <span class="muted">Austin, TX</span>
       </div>
