--- a/contact.html
+++ b/contact.html
@@ -1,21 +1,21 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-app-host="app.mercato.tech">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Contact IMS Cloud | Talk to the inventory team</title>
-  <meta name="description" content="Contact IMS Cloud to request a demo, ask about pricing, or discuss security and onboarding." />
+  <title>Contact Mercato Tech | Talk to the ops team</title>
+  <meta name="description" content="Contact Mercato Tech to request a demo, ask about pricing, or discuss security and onboarding." />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&family=Space+Grotesk:wght@500;600;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@500;600;700&family=Sora:wght@400;500;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="css/marketing.css" />
 </head>
 <body>
   <header class="site-header">
     <div class="container header-inner">
       <a class="logo" href="index.html">
-        <span class="logo-mark">IMS</span>
-        <div class="logo-text">IMS Cloud<span>Inventory platform</span></div>
+        <span class="logo-mark">MT</span>
+        <div class="logo-text">Mercato Tech<span>Industrial inventory</span></div>
       </a>
       <nav class="site-nav" id="site-nav">
         <a href="index.html">Home</a>
@@ -25,7 +25,7 @@
         <a class="active" href="contact.html">Contact</a>
       </nav>
       <div class="header-actions">
-        <a class="btn btn-primary app-cta" data-app-link href="https://app.example.com/login.html">Go to App</a>
+        <a class="btn btn-primary app-cta" data-app-link href="https://app.mercato.tech/login.html">Go to App</a>
         <button class="nav-toggle" type="button" aria-expanded="false" aria-controls="site-nav">Menu</button>
       </div>
     </div>
@@ -35,12 +35,12 @@
     <section class="hero">
       <div class="container hero-grid">
         <div class="fade-up">
-          <p class="pill">Talk to our team</p>
-          <h1>Let us map IMS Cloud to your workflow.</h1>
+          <p class="pill">Signal our team</p>
+          <h1>Wire Mercato Tech into your workflow.</h1>
           <p>Tell us about your inventory setup and we will recommend the best plan, rollout, and integration path.</p>
           <div class="hero-actions">
             <a class="btn btn-primary" href="#contact-form">Request a demo</a>
-            <a class="btn btn-secondary" data-app-link href="https://app.example.com/login.html">Go to App</a>
+            <a class="btn btn-secondary" data-app-link href="https://app.mercato.tech/login.html">Go to App</a>
           </div>
         </div>
         <div class="hero-card fade-up delay-2">
@@ -63,7 +63,7 @@
           <div class="grid">
             <div class="card">
               <strong>Email</strong>
-              <p class="muted">hello@imscloud.example</p>
+              <p class="muted">hello@mercato.tech</p>
             </div>
             <div class="card">
               <strong>Phone</strong>
@@ -104,7 +104,7 @@
           </div>
           <div style="display:flex;gap:12px;flex-wrap:wrap;justify-content:flex-end;">
             <a class="btn btn-secondary" href="features.html">View features</a>
-            <a class="btn btn-primary" data-app-link href="https://app.example.com/login.html">Go to App</a>
+            <a class="btn btn-primary" data-app-link href="https://app.mercato.tech/login.html">Go to App</a>
           </div>
         </div>
       </div>
@@ -115,10 +115,10 @@
     <div class="container footer-grid">
       <div>
         <div class="logo" style="margin-bottom:10px;">
-          <span class="logo-mark">IMS</span>
-          <div class="logo-text">IMS Cloud<span>Inventory platform</span></div>
+          <span class="logo-mark">MT</span>
+          <div class="logo-text">Mercato Tech<span>Industrial inventory</span></div>
         </div>
-        <p class="muted">Modern inventory management for operations leaders and field teams.</p>
+        <p class="muted">Industrial inventory command for operations leaders and field teams.</p>
       </div>
       <div class="footer-links">
         <strong>Product</strong>
@@ -130,11 +130,11 @@
         <strong>Company</strong>
         <a href="contact.html">Contact</a>
         <a href="contact.html">Request a demo</a>
-        <a data-app-link href="https://app.example.com/login.html">Go to App</a>
+        <a data-app-link href="https://app.mercato.tech/login.html">Go to App</a>
       </div>
       <div class="footer-links">
         <strong>Contact</strong>
-        <span class="muted">hello@imscloud.example</span>
+        <span class="muted">hello@mercato.tech</span>
         <span class="muted">+1 (555) 014-2211</span>
         <span class="muted">Austin, TX</span>
       </div>
