--- a/features.html
+++ b/features.html
@@ -1,21 +1,21 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-app-host="app.mercato.tech">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>IMS Cloud Features | Inventory workflows without friction</title>
-  <meta name="description" content="Explore IMS Cloud features for procurement, allocation, audit trails, and field checkouts. Built for modern operations teams." />
+  <title>Mercato Tech Features | Industrial ops modules</title>
+  <meta name="description" content="Explore Mercato Tech modules for procurement, allocation, audit trails, and field checkouts. Built for industrial operations teams." />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&family=Space+Grotesk:wght@500;600;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@500;600;700&family=Sora:wght@400;500;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="css/marketing.css" />
 </head>
 <body>
   <header class="site-header">
     <div class="container header-inner">
       <a class="logo" href="index.html">
-        <span class="logo-mark">IMS</span>
-        <div class="logo-text">IMS Cloud<span>Inventory platform</span></div>
+        <span class="logo-mark">MT</span>
+        <div class="logo-text">Mercato Tech<span>Industrial inventory</span></div>
       </a>
       <nav class="site-nav" id="site-nav">
         <a href="index.html">Home</a>
@@ -25,7 +25,7 @@
         <a href="contact.html">Contact</a>
       </nav>
       <div class="header-actions">
-        <a class="btn btn-primary app-cta" data-app-link href="https://app.example.com/login.html">Go to App</a>
+        <a class="btn btn-primary app-cta" data-app-link href="https://app.mercato.tech/login.html">Go to App</a>
         <button class="nav-toggle" type="button" aria-expanded="false" aria-controls="site-nav">Menu</button>
       </div>
     </div>
@@ -35,9 +35,9 @@
     <section class="hero">
       <div class="container hero-grid">
         <div class="fade-up">
-          <p class="pill">Feature highlights</p>
-          <h1>Inventory workflows without friction.</h1>
-          <p>IMS Cloud delivers procurement, allocation, and audit-ready tracking in a single platform designed for operations leaders.</p>
+          <p class="pill">Ops modules</p>
+          <h1>Industrial workflows, tuned for speed.</h1>
+          <p>Mercato Tech powers procurement, allocation, and audit-ready tracking in a single industrial control stack.</p>
           <div class="hero-actions">
             <a class="btn btn-primary" href="contact.html">Request a demo</a>
             <a class="btn btn-secondary" href="pricing.html">Compare plans</a>
@@ -58,8 +58,8 @@
     <section class="section">
       <div class="container">
         <div class="section-heading fade-up">
-          <h2>Core modules</h2>
-          <p>Everything you need to keep materials moving and teams aligned.</p>
+          <h2>Core ops modules</h2>
+          <p>Everything you need to keep materials moving and crews aligned.</p>
         </div>
         <div class="grid">
           <div class="card fade-up delay-1">
@@ -85,7 +85,7 @@
     <section class="section">
       <div class="container split">
         <div class="fade-up">
-          <h2>Automation that keeps teams on track</h2>
+          <h2>Automation that keeps crews on track</h2>
           <p class="muted">Reduce manual steps while keeping approvals, audit trails, and controls in place.</p>
           <ul class="list">
             <li><span>1</span>Auto-reserve stock on receipt based on project rules.</li>
@@ -94,8 +94,8 @@
           </ul>
         </div>
         <div class="card fade-up delay-2">
-          <h3>Mobile ready</h3>
-          <p class="muted">Field crews can review availability and complete checkouts in seconds.</p>
+          <h3>Field-hardened mobile</h3>
+          <p class="muted">Field crews review availability and complete checkouts in seconds.</p>
           <div class="badge-row">
             <span class="pill">Offline friendly</span>
             <span class="pill">Fast barcode scans</span>
@@ -108,7 +108,7 @@
     <section class="section">
       <div class="container">
         <div class="section-heading fade-up">
-          <h2>Analytics and reporting</h2>
+          <h2>Telemetry and reporting</h2>
           <p>See usage by project, category, and team to plan ahead.</p>
         </div>
         <div class="grid">
@@ -132,12 +132,12 @@
       <div class="container">
         <div class="cta-strip fade-up">
           <div>
-            <h2>Want to see a workflow demo?</h2>
-            <p>We will map IMS Cloud to your current process in one call.</p>
+            <h2>Want a live ops walkthrough?</h2>
+            <p>We will map Mercato Tech to your current process in one call.</p>
           </div>
           <div style="display:flex;gap:12px;flex-wrap:wrap;justify-content:flex-end;">
             <a class="btn btn-secondary" href="contact.html">Contact sales</a>
-            <a class="btn btn-primary" data-app-link href="https://app.example.com/login.html">Go to App</a>
+            <a class="btn btn-primary" data-app-link href="https://app.mercato.tech/login.html">Go to App</a>
           </div>
         </div>
       </div>
@@ -148,10 +148,10 @@
     <div class="container footer-grid">
       <div>
         <div class="logo" style="margin-bottom:10px;">
-          <span class="logo-mark">IMS</span>
-          <div class="logo-text">IMS Cloud<span>Inventory platform</span></div>
+          <span class="logo-mark">MT</span>
+          <div class="logo-text">Mercato Tech<span>Industrial inventory</span></div>
         </div>
-        <p class="muted">Modern inventory management for operations leaders and field teams.</p>
+        <p class="muted">Industrial inventory command for operations leaders and field teams.</p>
       </div>
       <div class="footer-links">
         <strong>Product</strong>
@@ -163,11 +163,11 @@
         <strong>Company</strong>
         <a href="contact.html">Contact</a>
         <a href="contact.html">Request a demo</a>
-        <a data-app-link href="https://app.example.com/login.html">Go to App</a>
+        <a data-app-link href="https://app.mercato.tech/login.html">Go to App</a>
       </div>
       <div class="footer-links">
         <strong>Contact</strong>
-        <span class="muted">hello@imscloud.example</span>
+        <span class="muted">hello@mercato.tech</span>
         <span class="muted">+1 (555) 014-2211</span>
         <span class="muted">Austin, TX</span>
       </div>
