--- a/pricing.html
+++ b/pricing.html
@@ -1,21 +1,21 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-app-host="app.mercato.tech">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>IMS Cloud Pricing | Plans for every inventory team</title>
-  <meta name="description" content="Simple, transparent pricing for IMS Cloud. Choose the plan that fits your team and scale with confidence." />
+  <title>Mercato Tech Pricing | Industrial ops plans</title>
+  <meta name="description" content="Simple, transparent pricing for Mercato Tech. Industrial teams choose a plan and scale with confidence." />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&family=Space+Grotesk:wght@500;600;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@500;600;700&family=Sora:wght@400;500;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="css/marketing.css" />
 </head>
 <body>
   <header class="site-header">
     <div class="container header-inner">
       <a class="logo" href="index.html">
-        <span class="logo-mark">IMS</span>
-        <div class="logo-text">IMS Cloud<span>Inventory platform</span></div>
+        <span class="logo-mark">MT</span>
+        <div class="logo-text">Mercato Tech<span>Industrial inventory</span></div>
       </a>
       <nav class="site-nav" id="site-nav">
         <a href="index.html">Home</a>
@@ -25,7 +25,7 @@
         <a href="contact.html">Contact</a>
       </nav>
       <div class="header-actions">
-        <a class="btn btn-primary app-cta" data-app-link href="https://app.example.com/login.html">Go to App</a>
+        <a class="btn btn-primary app-cta" data-app-link href="https://app.mercato.tech/login.html">Go to App</a>
         <button class="nav-toggle" type="button" aria-expanded="false" aria-controls="site-nav">Menu</button>
       </div>
     </div>
@@ -35,8 +35,8 @@
     <section class="hero">
       <div class="container hero-grid">
         <div class="fade-up">
-          <p class="pill">Transparent pricing</p>
-          <h1>Plans that scale with your inventory.</h1>
+          <p class="pill">Ops pricing</p>
+          <h1>Plans built for industrial ops.</h1>
           <p>Pick a plan that fits your operations today and grow into automation, analytics, and enterprise controls.</p>
           <div class="hero-actions">
             <a class="btn btn-primary" href="contact.html">Talk to sales</a>
@@ -123,12 +123,12 @@
       <div class="container">
         <div class="cta-strip fade-up">
           <div>
-            <h2>Ready to go live?</h2>
-            <p>Set up your workspace in days, not weeks.</p>
+          <h2>Ready to deploy?</h2>
+          <p>Set up your workspace in days, not weeks.</p>
           </div>
           <div style="display:flex;gap:12px;flex-wrap:wrap;justify-content:flex-end;">
             <a class="btn btn-secondary" href="contact.html">Schedule a call</a>
-            <a class="btn btn-primary" data-app-link href="https://app.example.com/login.html">Go to App</a>
+            <a class="btn btn-primary" data-app-link href="https://app.mercato.tech/login.html">Go to App</a>
           </div>
         </div>
       </div>
@@ -139,10 +139,10 @@
     <div class="container footer-grid">
       <div>
         <div class="logo" style="margin-bottom:10px;">
-          <span class="logo-mark">IMS</span>
-          <div class="logo-text">IMS Cloud<span>Inventory platform</span></div>
+          <span class="logo-mark">MT</span>
+          <div class="logo-text">Mercato Tech<span>Industrial inventory</span></div>
         </div>
-        <p class="muted">Modern inventory management for operations leaders and field teams.</p>
+        <p class="muted">Industrial inventory command for operations leaders and field teams.</p>
       </div>
       <div class="footer-links">
         <strong>Product</strong>
@@ -154,11 +154,11 @@
         <strong>Company</strong>
         <a href="contact.html">Contact</a>
         <a href="contact.html">Request a demo</a>
-        <a data-app-link href="https://app.example.com/login.html">Go to App</a>
+        <a data-app-link href="https://app.mercato.tech/login.html">Go to App</a>
       </div>
       <div class="footer-links">
         <strong>Contact</strong>
-        <span class="muted">hello@imscloud.example</span>
+        <span class="muted">hello@mercato.tech</span>
         <span class="muted">+1 (555) 014-2211</span>
         <span class="muted">Austin, TX</span>
       </div>
