--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Mercato Tech | Industrial inventory command for modern ops</title>
-  <meta name="description" content="Mercato Tech is an industrial inventory command center for procurement, allocation, and field teams. Real-time stock, audit-ready trails, and rapid deployment." />
+  <title>Mercato Tech | Inventory command for modern ops</title>
+  <meta name="description" content="Mercato Tech is an inventory command center for procurement, allocation, and field teams. Real-time stock, audit-ready trails, and rapid deployment." />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@500;600;700&family=Sora:wght@400;500;600;700&display=swap" rel="stylesheet" />
@@ -15,7 +15,7 @@
     <div class="container header-inner">
       <a class="logo" href="index.html">
         <span class="logo-mark">MT</span>
-        <div class="logo-text">Mercato Tech<span>Industrial inventory</span></div>
+        <div class="logo-text">Mercato Tech<span>Inventory</span></div>
       </a>
       <nav class="site-nav" id="site-nav">
         <a class="active" href="index.html">Home</a>
@@ -35,8 +35,8 @@
     <section class="hero">
       <div class="container hero-grid">
         <div class="fade-up">
-          <p class="pill">Industrial ops OS</p>
-          <h1>Command-grade inventory for industrial crews.</h1>
+          <p class="pill">Ops OS</p>
+          <h1>Command-grade inventory for service crews.</h1>
           <p>Mercato Tech syncs procurement, allocation, and field checkouts into one real-time ops console. Cut downtime, track every move, and stay audit ready.</p>
           <div class="hero-actions">
             <a class="btn btn-primary" href="contact.html">Request a demo</a>
