Refactor HTML files to remove hardcoded app host URLs and update email addresses for consistency

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-app-host="app.mercato.tech">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -25,7 +25,7 @@
         <a class="active" href="contact.html">Contact</a>
       </nav>
       <div class="header-actions">
-        <a class="btn btn-primary app-cta" data-app-link href="https://app.mercato.tech/login.html">Go to App</a>
+        <a class="btn btn-primary app-cta" data-app-link href="login.html">Go to App</a>
         <button class="nav-toggle" type="button" aria-expanded="false" aria-controls="site-nav">Menu</button>
       </div>
     </div>
@@ -40,7 +40,7 @@
           <p>Tell us about your inventory setup and we will recommend the best plan, rollout, and integration path.</p>
           <div class="hero-actions">
             <a class="btn btn-primary" href="#contact-form">Request a demo</a>
-            <a class="btn btn-secondary" data-app-link href="https://app.mercato.tech/login.html">Go to App</a>
+            <a class="btn btn-secondary" data-app-link href="login.html">Go to App</a>
           </div>
         </div>
         <div class="hero-card fade-up delay-2">
@@ -63,7 +63,7 @@
           <div class="grid">
             <div class="card">
               <strong>Email</strong>
-              <p class="muted">hello@mercato.tech</p>
+              <p class="muted">hello@mercato.example</p>
             </div>
             <div class="card">
               <strong>Phone</strong>
@@ -104,7 +104,7 @@
           </div>
           <div style="display:flex;gap:12px;flex-wrap:wrap;justify-content:flex-end;">
             <a class="btn btn-secondary" href="features.html">View features</a>
-            <a class="btn btn-primary" data-app-link href="https://app.mercato.tech/login.html">Go to App</a>
+            <a class="btn btn-primary" data-app-link href="login.html">Go to App</a>
           </div>
         </div>
       </div>
@@ -130,11 +130,11 @@
         <strong>Company</strong>
         <a href="contact.html">Contact</a>
         <a href="contact.html">Request a demo</a>
-        <a data-app-link href="https://app.mercato.tech/login.html">Go to App</a>
+        <a data-app-link href="login.html">Go to App</a>
       </div>
       <div class="footer-links">
         <strong>Contact</strong>
-        <span class="muted">hello@mercato.tech</span>
+        <span class="muted">hello@mercato.example</span>
         <span class="muted">+1 (555) 014-2211</span>
         <span class="muted">Austin, TX</span>
       </div>
