--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-app-host="app.mercato.tech">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -25,7 +25,7 @@
         <a href="contact.html">Contact</a>
       </nav>
       <div class="header-actions">
-        <a class="btn btn-primary app-cta" data-app-link href="https://app.mercato.tech/login.html">Go to App</a>
+        <a class="btn btn-primary app-cta" data-app-link href="login.html">Go to App</a>
         <button class="nav-toggle" type="button" aria-expanded="false" aria-controls="site-nav">Menu</button>
       </div>
     </div>
@@ -214,7 +214,7 @@
           </div>
           <div style="display:flex;gap:12px;flex-wrap:wrap;justify-content:flex-end;">
             <a class="btn btn-secondary" href="contact.html">Talk to sales</a>
-            <a class="btn btn-primary" data-app-link href="https://app.mercato.tech/login.html">Go to App</a>
+            <a class="btn btn-primary" data-app-link href="login.html">Go to App</a>
           </div>
         </div>
       </div>
@@ -240,11 +240,11 @@
         <strong>Company</strong>
         <a href="contact.html">Contact</a>
         <a href="contact.html">Request a demo</a>
-        <a data-app-link href="https://app.mercato.tech/login.html">Go to App</a>
+        <a data-app-link href="login.html">Go to App</a>
       </div>
       <div class="footer-links">
         <strong>Contact</strong>
-        <span class="muted">hello@mercato.tech</span>
+        <span class="muted">hello@mercato.example</span>
         <span class="muted">+1 (555) 014-2211</span>
         <span class="muted">Austin, TX</span>
       </div>
