Update CSS variables and set data attribute for body in multiple HTML files

--- a/employee-dashboard.html
+++ b/employee-dashboard.html
@@ -16,7 +16,7 @@
     .task-btn:hover{transform:translateY(-2px);box-shadow:0 12px 26px rgba(0,0,0,0.22);opacity:0.95;}
   </style>
 </head>
-<body>
+<body data-ds="pro">
   <div class="app">
     <aside class="sidebar">
       <div>
