--- a/item-master.html
+++ b/item-master.html
@@ -6,7 +6,7 @@
   <title>Item Master</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
-<body>
+<body data-ds="pro">
   <div class="app">
     <aside class="sidebar">
       <div>
