--- a/job-creator.html
+++ b/job-creator.html
@@ -6,7 +6,7 @@
   <title>Project Manager</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
-<body>
+<body data-ds="pro">
   <div class="app">
     <aside class="sidebar">
       <div>
