--- a/job-report.html
+++ b/job-report.html
@@ -7,7 +7,7 @@
   <title>Project Report</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
-<body>
+<body data-ds="pro">
   <div class="app">
     <main class="main">
       <header class="topbar">
