--- a/order-register.html
+++ b/order-register.html
@@ -6,7 +6,7 @@
   <title>Procurement &amp; Allocation</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
-<body data-ds="v1">
+<body data-ds="pro">
   <div class="app">
         <aside class="sidebar">
       <div>
