--- a/settings.html
+++ b/settings.html
@@ -6,7 +6,7 @@
   <title>Admin Settings</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
-<body>
+<body data-ds="pro">
   <div class="app">
         <aside class="sidebar">
       <div>
