--- a/support.html
+++ b/support.html
@@ -6,7 +6,7 @@
   <title>Support</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
-<body>
+<body data-ds="pro">
   <div class="app">
     <aside class="sidebar">
       <div>
