--- a/login.html
+++ b/login.html
@@ -15,8 +15,9 @@
     label{color:#cbd5f5;}
     input{background:#0f172a;color:#e5e7eb;border:1px solid #1f2937;}
     button{background:linear-gradient(135deg,#0f7a57,#14a26d);border:none;color:#fff;font-weight:800;box-shadow:0 10px 30px rgba(20,162,109,0.35);}
-    .back-link{margin-top:14px;width:100%;background:transparent;border:1px solid rgba(255,255,255,0.18);box-shadow:none;color:#e5e7eb;font-weight:700;}
-    .back-link:hover{background:rgba(255,255,255,0.06);}
+    .back-link{margin-top:14px;width:100%;background:linear-gradient(135deg,rgba(15,122,87,0.16),rgba(10,27,43,0.18));border:1px solid rgba(15,122,87,0.45);box-shadow:0 10px 24px rgba(15,122,87,0.2);color:#e5e7eb;font-weight:800;text-transform:uppercase;letter-spacing:0.12em;font-size:0.75rem;padding:12px;border-radius:12px;cursor:pointer;transition:transform .15s ease, box-shadow .15s ease, border-color .15s ease, background .15s ease;}
+    .back-link:hover{transform:translateY(-1px);box-shadow:0 12px 26px rgba(15,122,87,0.28);border-color:rgba(15,122,87,0.7);}
+    .back-link:focus-visible{outline:3px solid rgba(15,122,87,0.35);outline-offset:2px;}
     .auth-actions{align-items:center;justify-content:space-between;gap:12px;}
     .auth-actions .remember-label{display:flex;align-items:center;gap:10px;font-size:0.85rem;color:#cbd5f5;flex:1;flex-direction:row;}
     .auth-actions input[type="checkbox"]{width:16px;height:16px;margin:0;accent-color:#14a26d;border-radius:4px;box-shadow:0 0 0 1px rgba(255,255,255,0.12);}
